--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "docker-build": "tsc && docker build -t rushmead/discord-bot .",
     "start": "node dist/index.js"
   },
   "author": "Rushmead",
