--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "./build",
+        "rootDir": "./src",
         "baseUrl": ".",
         "paths": {
             "*": [
